--- a/html_02.html
+++ b/html_02.html
@@ -9,9 +9,21 @@
     
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <h1>Шашлык</h1>
     <hr>
     <p>Текст</p>
+    <ol>
+        <li>лук</li>
+        <li>мясо</li>
+        <li>грибы</li>
+        <li>зелень</li>
+        <li>маринад</li>
+    </ol>
+    <ul>
+        <li>помидоры</li>
+        <li>соль</li>
+        <li>перец</li>
+    </ul>
     <script>scr="js\scripts.js"</script>
     
 </body>
